tests/negative/neg_pr1112a_constant_shared.safe
package neg_pr1112a_constant_shared

   type settings is record
      value : integer;
   
   shared cfg : constant settings = (value = 1);
